--- a/sass/_docs.sass
+++ b/sass/_docs.sass
@@ -1,7 +1,7 @@
 .docs
     padding: 80px 0
     .docs_col
-        padding: 0 20px
+        padding: 0 10px
 .docs_cols
     overflow: hidden
     height: 0
