--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -4,7 +4,10 @@
 
 .expand-img
     cursor: pointer
-
+    
+.inverse-wrap
+    margin-left: -10px
+    margin-right: -10px
 img
     width: 100%
     height: auto
